@@ -52,7 +52,7 @@
                         <segue destination="2Hp-Fe-994" kind="modal" identifier="About Button" modalPresentationStyle="formSheet" modalTransitionStyle="coverVertical" id="hp3-q0-AaZ"/>
                     </connections>
                 </barButtonItem>
-                <barButtonItem systemItem="action" id="Yi6-gl-bFq" userLabel="Tools Bar Button">
+                <barButtonItem systemItem="add" id="Yi6-gl-bFq" userLabel="Tools Bar Button">
                     <connections>
                         <action selector="toolsButtonPressed:" destination="GW8-lK-xxa" id="slh-W0-kwZ"/>
                     </connections>
