@@ -3,6 +3,8 @@
 - Filling in missing synthetic data
 - Set all red color to hReader red
 - Vitals in the timeline now also show the values
+- Moved tools and about to toolbar
+- Changed tools button from 'action' to 'add' icon per Jeff's request
 
 # 2012-4-03
 
